Avoid auto focus of text fields on mobile devices

--- a/app/assets/stylesheets/base/modals.scss
+++ b/app/assets/stylesheets/base/modals.scss
@@ -2,7 +2,7 @@
   $modal-background: $color-white !default;
   $modal-border-radius: .5rem;
   $modal-close-color: $color-gray !default;
-  $modal-fade-color: rgba(#000, .7);
+  $modal-fade-color: rgba(#000, .4);
   $modal-padding: 1em;
 
   .modal-fade-screen {
@@ -33,7 +33,8 @@
   .modal-inner {
     background: $modal-background;
     border-radius: $modal-border-radius;
-    box-shadow: 0px 0px 4px 0px #000000;
+    box-shadow: 0 16px 28px 0 rgba(0, 0, 0, .22),
+                0 25px 55px 0 rgba(0, 0, 0, .21);
     left: 50%;
     margin: auto;
     max-height: 95%;
